<resources>
    <string name="app_name">first app</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="todo_tittle">TODO App.</string>
    <string name="todo_category">Categorias</string>
    <string name="todo_tasks">Tareas</string>
    <string name="todo_dialog_add_task">Añadir la tarea</string>
    <string name="todo_category_business">Negocios</string>
    <string name="todo_category_personal">Personal</string>
    <string name="todo_category_other">Otros</string>
    <string name="todo_btn_add_task">Crear tarea</string>


    <!-- SETTINGS-->
    <string name="settings_darkmode">Dark Mode</string>
    <string name="settings_darkmode_description">Activa el modo oscuro para un cambio visual.</string>
    <string name="settings_bluetooth">Bluetooth</string>
    <string name="settings_bluetooth_description">Activa el bluetooth del dispositivo.</string>
    <string name="settings_volume">Volumen</string>
    <string name="settings_vibration">Vibración</string>
</resources>